# lgos

./: LICENSE  Makefile  README.md  build.sh  common.mk  compile.sh  debug.sh  disasm.sh  doxygen.sh  emu.sh  meson.build  meson.sh
doc/: asm.awk  asm.sed  doxygen.conf  lgos.conf  meson.build
emu/: elf.awk  emu.sh  emuimg.sh  filefrag.awk  mbr.awk  meson.build
misc/: awk-phony-dep.awk
src/: makefile.mk  meson.build
src/arch/i386/: makefile.mk  meson-cross.txt  meson.build  meson.ini
src/arch/i386/boot/: disk.S  ext2.ld  fat.S  fat.ld  init.S  init.s  load.S  makefile.mk  mbr.S  mbr.ld  mbr.s  meson.build  misc.S  video.S  video.s
src/arch/i386/bootblock/: common.s  disk.s  main_fat.ld  main_fat.s  main_mbr.ld  main_mbr.s  mbr.ld  mbr.s  meson.build  video.s  video_inc.s
src/arch/i386/emu/: blocklist.py  emu.sh  makefile.mk  meson.build  mkemu.sh  mkimg.sh
src/arch/i386/kernel/: init.S
src/arch/i386/loader/: disk.c  disk.h  init.S  loader.ld  main.c  main_loader.ld  main_loader.s  makefile.mk  meson.build  misc.c  misc.h  video.c  video.h
src/compile/meson-logs/: meson-log.txt
